welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: illegal start of statement
    else if(hour<7 && hour>20){
    ^